# TheRiseOfHullstorm

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: ecs.hpp
include/core/: common.hpp  dataStructures.hpp  time.hpp
include/core/dataStructures/: list.hpp  map.hpp  tuple.hpp  vector.hpp
include/core/time/: deltaTime.inl
include/dataStructures/: list.hpp  vector.hpp
include/ecs/: component.hpp  componentManager.hpp  componentManager.inl  entity.hpp  entityManager.hpp  entityManager.inl  system.hpp  system.inl
include/ecs/component/: component.hpp  componentManager.hpp  componentManager.inl  components.hpp
include/ecs/entities/: entity.hpp  entityManager.hpp  entityManager.inl
include/ecs/entity/: entities.hpp  entities.inl  entity.hpp  entityManager.hpp  entityManager.inl
include/ecs/systems/connection/: connectionSystem.inl
include/ecs/systems/input/: inputSystem.hpp  inputSystem.inl
include/ecs/systems/mechanics/: mapSystem.hpp  mapSystem.inl  movementSystem.hpp  movementSystem.inl
include/ecs/systems/player/: playerSystem.hpp  playerSystem.inl
include/ecs/systems/rendering/: animatedModel.hpp  mesh.hpp  model.hpp  model.inl  renderingSystem.hpp  renderingSystem.inl  shader.hpp  shader.inl  sprite.hpp  sprite.inl
include/ecs/systems/unit/: abstractFactory.hpp  abstractFactory.inl  environmentFactory.hpp  environmentFactory.inl  humanFactory.hpp  humanFactory.inl  oximorphFactory.hpp  oximorphFactory.inl  unitSystem.hpp  unitSystem.inl
include/legacy/ecs/systems/connection/: connectionSystem.hpp
include/legacy/ecs/systems/input/: inputSystem.hpp  inputSystem.inl
include/system/: common.hpp
res/maps/: map01.rohmap  map02.rohmap  map04.rohmap  map05.rohmap  map06.rohmap
res/models/buildings/archery/: archery.mtl
res/models/buildings/barracks/: barracks.mtl
res/models/buildings/castle/: castle.mtl
res/models/buildings/farm/: farm.mtl
res/models/environment/mine/: mine.mtl
res/models/environment/tree03/: tree.mtl
res/models/primitives/: cube.mtl
res/models/units/bowman/: bowman.mtl
res/models/units/soldier/: soldier.mtl
res/models/units/tree02/: tree.mtl
res/models/units/villager/: villager.mtl
shaders/: hudShader.fs  hudShader.vs  lightingShader.fs  lightingShader.vs
src/: main.cpp
